--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				Скачать клиент
 			</a>
 			<a class="button button_yellow">
-				Авторизация
+				Войти
 			</a>
 			<div class="page__language js-dropdown">
 				<p class="current__language">Ru <img src="./assets/img/icons/language-arrow.svg" alt="">
@@ -258,7 +258,7 @@
 									DEAMOND
 								</p>
 								<p class="players__info-name">
-									Иван Сирнов
+									Ивана Сирнова
 								</p>
 								<p class="players__info-team">
 									Team: NAVI
@@ -698,6 +698,12 @@
 		<path d="M85.4974 62.228L78.8032 81.1829L93.0449 98.5566L125.989 98.5965L85.4974 62.228Z" fill="#FAC704" />
 	</svg>
 	</footer>
+	<button class="to__top">
+		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up" viewBox="0 0 16 16">
+			<path fill-rule="evenodd" d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z"/>
+			<path fill-rule="evenodd" d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+		</svg>
+	</button>
 
 	<script src='./assets/scripts/slider.js'></script>
 	<script src='./assets/scripts/wow.js'></script>
