--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<img src="./assets/img/icons/download.svg" alt="">
 				Скачать клиент
 			</a>
-			<a class="button button_yellow">
-				Войти
+			<a class="button button_yellow" href="http://battlestar.co/">
+				Личный кабинет
 			</a>
 			<div class="page__language js-dropdown">
 				<p class="current__language">Ru <img src="./assets/img/icons/language-arrow.svg" alt="">
@@ -145,7 +145,7 @@
 					<img class="games-img-pc" src="./assets/img/backgrounds/game-dota-preview.png" alt="">
 					<img class="games__image_gold-wrapper games-img-pc" src="./assets/img/backgrounds/game-dota-back.svg" alt="">
 					<img class="games-img-phone" src="./assets/img/backgrounds/game-dota-preview-mobile.png" alt="">
-					<a href="#" class="games__download">Создать аккаунт</a>
+					<a  href="http://battlestar.co/" class="games__download">Создать аккаунт</a>
 				</div>
 				<p class="games__title">DOTA 2</p>
 			</div>
@@ -154,7 +154,7 @@
 					<img class="games-img-pc" src="./assets/img/backgrounds/game-cs-preview.png" alt="">
 					<img class="games__image_gold-wrapper games-img-pc" src="./assets/img/backgrounds/game-cs-back.svg" alt="">
 					<img class="games-img-phone" src="./assets/img/backgrounds/game-cs-preview-mobile.png" alt="">
-					<a href="#" class="games__download">Создать аккаунт</a>
+					<a href="http://battlestar.co/" class="games__download">Создать аккаунт</a>
 				</div>
 				<p class="games__title"> CS:GO</p>
 			</div>
@@ -199,7 +199,7 @@
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
 				<div class="promotions__card-descriptions">Пополни баланс сегодня и полчи +200 BS в качестве бонуса</div>
-				<a href="#" class="button button_white promotions__button">Создать аккаунт</a>
+				<a href="http://battlestar.co/" class="button button_white promotions__button">Создать аккаунт</a>
 			</div>
 		</div>
 	</section>
@@ -359,7 +359,7 @@
 	<section class="banner">
 		<div class="container  df-jcsb-aic">
 			<p>Бонус 500 BS для новых игроков</p>
-			<a href="#" class="button button_yellow">Создать аккаунт</a>
+			<a href="http://battlestar.co/" class="button button_yellow">Создать аккаунт</a>
 		</div>
 	</section>
 	<section class="stars wow fadeInUp" data-wow-duration="0.5s">
@@ -546,7 +546,7 @@
 					мере повышения рейтинга. Гибкая система оценок позволит Вам ставить новые цели и достигать их каждый день, а
 					отбор экспертами BattleStar будет основываться на ваших рейтинговых достижениях.
 				</p>
-				<a href="" class="button button_yellow">Создать аккаунт</a>
+				<a href="http://battlestar.co/" class="button button_yellow">Создать аккаунт</a>
 			</div>
 		</div>
 	</section>
