--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="./assets/img/favicon.ico">
-	<title>BattleStar</title>
+	<title>PlayStrike</title>
 	<link rel="stylesheet" href='./assets/css/reset.css'>
 	<link rel="stylesheet" href='./assets/css/swiper.min.css'>
 	<link rel="stylesheet" href='./assets/css/style.css'>
@@ -111,7 +111,7 @@
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
 				<img class="benefits__image" src="./assets/img/benefits/1.png" alt="">
 				<div class="benefits__text">
-					<p class="benefits__title">Турниры BattleStar</p>
+					<p class="benefits__title">Турниры PlayStrike</p>
 					<p class="benefits__description">Профессиональные и любительские турниры с большими призовыми фондами</p>
 				</div>
 			</div>
@@ -133,7 +133,7 @@
 				<img class="benefits__image" src="./assets/img/benefits/4.png" alt="">
 				<div class="benefits__text">
 					<p class="benefits__title">Античит</p>
-					<p class="benefits__description">Античит BattleStar нового поколения обеспечит честную игру</p>
+					<p class="benefits__description">Античит PlayStrike нового поколения обеспечит честную игру</p>
 				</div>
 			</div>
 		</div>
@@ -195,7 +195,7 @@
 
 	<section class="promotions">
 		<div class="container wow slideInRight" data-wow-duration="0.5s">
-			<h2 class="promotions__title title"> Акции и бонусы от BattleStar</h2>
+			<h2 class="promotions__title title"> Акции и бонусы от PlayStrike</h2>
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
 				<div class="promotions__card-descriptions">Пополни баланс сегодня и полчи +200 BS в качестве бонуса</div>
@@ -264,7 +264,7 @@
 									Team: NAVI
 								</p>
 								<p class="players__info-description">
-									Я знаком с проектом BattleStar уже несколько месяцев и остаюсь доволен высоким уровнем
+									Я знаком с проектом PlayStrike уже несколько месяцев и остаюсь доволен высоким уровнем
 									профессионализма
 									команды, которая совершенствует свой продукт каждый день.
 								</p>
@@ -285,7 +285,7 @@
 									Team: NAVI
 								</p>
 								<p class="players__info-description">
-									Проект "BattleStar" подарил нам один из самых удобных игровых сервисов. Вспоминая начало своей
+									Проект "PlayStrike" подарил нам один из самых удобных игровых сервисов. Вспоминая начало своей
 									карьеры,
 									могу сказать с увереностью, что подобного ресурса очень не хватало.
 								</p>
@@ -379,7 +379,7 @@
 				</div>
 			</div>
 
-			<h2 class="stars__title title  wow fadeInUp" data-wow-duration="0.5s">Звёзды BattleStar</h2>
+			<h2 class="stars__title title  wow fadeInUp" data-wow-duration="0.5s">Звёзды PlayStrike</h2>
 			<p class="stars__description  wow fadeInUp" data-wow-duration="0.5s">Задача организации, в особенности же новая
 				модель организационной деятельности
 				позволяет </p>
@@ -544,7 +544,7 @@
 				<p class="statistic__description">
 					Подробная расширенная статистика позволит вам отслеживать свой прогресс по
 					мере повышения рейтинга. Гибкая система оценок позволит Вам ставить новые цели и достигать их каждый день, а
-					отбор экспертами BattleStar будет основываться на ваших рейтинговых достижениях.
+					отбор экспертами PlayStrike будет основываться на ваших рейтинговых достижениях.
 				</p>
 				<a href="https://my.playstrike.ru/" class="button button_yellow">Создать аккаунт</a>
 			</div>
@@ -554,7 +554,7 @@
 	<section class="application">
 		<div class="container application__wrapper">
 			<div class="application__info wow fadeInLeft" data-wow-duration="0.5s">
-				<h2 class="application__title">Удобное приложение BattleStar</h2>
+				<h2 class="application__title">Удобное приложение PlayStrike</h2>
 				<p class="application__description">
 					Повседневная практика показывает, что сложившаяся структура организации требуют определения и уточнения
 					системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также
@@ -626,7 +626,7 @@
 						</div>
 					</div>
 					<div class="menu__item">
-						<p class="menu__title"> О BattleStar
+						<p class="menu__title"> О PlayStrike
 						</p>
 						<div class="menu__links">
 							<a href="#" class="menu__link">Поддержка</a>
