update hreff google

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
-		<a href="#">
+		<a href="google.com">
 			Для партнёров
 		</a>
 		<div class="header__buttons df-jcsb-aic">
