--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
 	<header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
-		<a href="google.com">
-			Для партнёров
+		<a href="#">
+			Для партнёров 
 		</a>
 		<div class="header__buttons df-jcsb-aic">
 			<a class="button_white button">
