--- a/index.html
+++ b/index.html
@@ -16,44 +16,44 @@
 <body>
 	<header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
 		<a href="#">
-			Для партнёров 
+			<!--Для партнёров-->
 		</a>
 		<div class="header__buttons df-jcsb-aic">
-			<a class="button_white button">
-				<img src="./assets/img/icons/download.svg" alt="">
-				Скачать клиент
+			<a class="button_white button" href="https://my.playstrike.ru/auth/signup">
+				<!--<img src="./assets/img/icons/download.svg" alt="">-->
+				Регистрация
 			</a>
 			<a class="button button_yellow" href="https://my.playstrike.ru/">
 				Личный кабинет
 			</a>
-			<div class="page__language js-dropdown">
+			<!--<div class="page__language js-dropdown">
 				<p class="current__language">Ru <img src="./assets/img/icons/language-arrow.svg" alt="">
 				</p>
 				<ul class="page__language">
 					<li>Ru</li>
 					<li>En</li>
 				</ul>
-			</div>
+			</div>-->
 		</div>
 	</header>
 
 	<section class="main wow fadeInDown" data-wow-duration="0.5s">
 		<div class="container ">
 			<div class="main__logo">
-				<img src="./assets/img/icons/logo-icon.svg" alt="">
+				<img src="./assets/img/icons/logo-icon.png" alt="">
 			</div>
 			<h1 class="main__title title">Соревновательные матчи и турниры</h1>
 			<p class="main__description">Задача организации, в особенности же новая модель организационной деятельности
 				позволяет оценить значение позиций, занимаемых участниками в отношении поставленных задач. </p>
-			<div class="main__buttons df-jcsb-aic">
+			<!--<div class="main__buttons df-jcsb-aic">
 				<a class="button button_yellow-transparent df-jcsb-aic">Скачать на Mac <img class="apple__icon"
 						src="./assets/img/icons/apple-icon.svg" alt=""></a>
 				<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
 						src="./assets/img/icons/windows-icon.svg" alt=""></a>
-			</div>
+			</div>-->
 		</div>
 	</section>
-	<section class="partners wow fadeInDown" data-wow-duration="0.5s">
+	<!--<section class="partners wow fadeInDown" data-wow-duration="0.5s">
 		<div class="partners__swiper">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide partners__slide slide-1">
@@ -79,25 +79,34 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<section class="news news__container wow fadeInUp" data-wow-duration="0.5s">
+		<h2 class="instructions__title title">Новости</h2>
 		<div class="news__swiper">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
 					<img src="./assets/img/tournaments/1.png" alt="">
-					<p class="news__title"><span class="online">Онлайн</span> NAC Sport Championship 2020</p>
+					<p class="news__title">
+						<!--<span class="online">Онлайн</span>-->
+						NAC Sport Championship 2020</p>
 				</div>
 				<div class="swiper-slide">
 					<img src="./assets/img/tournaments/2.png" alt="">
-					<p class="news__title"><span class="online">Онлайн</span> MAJOR STOCKHOLM 2021</p>
+					<p class="news__title">
+						<!--<span class="online">Онлайн</span>-->
+						MAJOR STOCKHOLM 2021</p>
 				</div>
 				<div class="swiper-slide">
 					<img src="./assets/img/tournaments/3.png" alt="">
-					<p class="news__title"><span class="online">Онлайн</span> THE ELEAGUE - CS:GO Premier</p>
+					<p class="news__title">
+						<!--<span class="online">Онлайн</span>-->
+						THE ELEAGUE - CS:GO Premier</p>
 				</div>
 				<div class="swiper-slide">
 					<img src="./assets/img/tournaments/4.png" alt="">
-					<p class="news__title"><span class="online">Онлайн</span> IEM KATOWICE CS:GO</p>
+					<p class="news__title">
+						<!--<span class="online">Онлайн</span>-->
+						IEM KATOWICE CS:GO</p>
 				</div>
 			</div>
 			<div class="swiper__arrows">
@@ -107,6 +116,7 @@
 		</div>
 	</section>
 	<section class="benefits wow fadeInUp" data-wow-duration="0.5s">
+		<h2 class="instructions__title title">Преимущества</h2>
 		<div class="container df-jcsb-aic">
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
 				<img class="benefits__image" src="./assets/img/benefits/1.png" alt="">
@@ -118,7 +128,7 @@
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">
 				<img class="benefits__image" src="./assets/img/benefits/2.png" alt="">
 				<div class="benefits__text">
-					<p class="benefits__title">Более 200 000 игроков</p>
+					<p class="benefits__title">Множество игроков</p>
 					<p class="benefits__description">Играйте с друзьями и собирайте команды в огромном комьюнити игроков</p>
 				</div>
 			</div>
@@ -145,7 +155,7 @@
 					<img class="games-img-pc" src="./assets/img/backgrounds/game-dota-preview.png" alt="">
 					<img class="games__image_gold-wrapper games-img-pc" src="./assets/img/backgrounds/game-dota-back.svg" alt="">
 					<img class="games-img-phone" src="./assets/img/backgrounds/game-dota-preview-mobile.png" alt="">
-					<a  href="https://my.playstrike.ru/" class="games__download">Создать аккаунт</a>
+					<a href="https://my.playstrike.ru/" class="games__download">Создать аккаунт</a>
 				</div>
 				<p class="games__title">DOTA 2</p>
 			</div>
@@ -198,12 +208,12 @@
 			<h2 class="promotions__title title"> Акции и бонусы от PlayStrike</h2>
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
-				<div class="promotions__card-descriptions">Пополни баланс сегодня и полчи +200 BS в качестве бонуса</div>
+				<div class="promotions__card-descriptions">Пригласи друга и  получи +200 PS в качестве бонуса</div>
 				<a href="https://my.playstrike.ru/" class="button button_white promotions__button">Создать аккаунт</a>
 			</div>
 		</div>
 	</section>
-	<section class="players wow fadeInUp" data-wow-duration="0.5s">
+	<!--<section class="players wow fadeInUp" data-wow-duration="0.5s">
 		<div class="container">
 			<h2 class="professional__title title">Профессиональные игроки</h2>
 			<p class="players__description">Повседневная практика показывает, что сложившаяся структура организации требуют
@@ -355,14 +365,14 @@
 					</div>
 				</div>
 			</div>
-	</section>
+	</section>-->
 	<section class="banner">
 		<div class="container  df-jcsb-aic">
-			<p>Бонус 500 BS для новых игроков</p>
+			<p>Бесплатная регистрация для новых игроков</p>
 			<a href="https://my.playstrike.ru/" class="button button_yellow">Создать аккаунт</a>
 		</div>
 	</section>
-	<section class="stars wow fadeInUp" data-wow-duration="0.5s">
+	<!--<section class="stars wow fadeInUp" data-wow-duration="0.5s">
 		<div class="container">
 			<div class="stars__banner df-jcsb-aic">
 				<div class="stars__banner-card">
@@ -401,7 +411,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">200 029 BS</p>
+							<p class="stars__info-text">200 029 PS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -432,7 +442,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">190 095 BS</p>
+							<p class="stars__info-text">190 095 PS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -461,7 +471,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">180 571 BS</p>
+							<p class="stars__info-text">180 571 PS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -490,7 +500,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">150 345 BS</p>
+							<p class="stars__info-text">150 345 PS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -519,7 +529,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">148 546 BS</p>
+							<p class="stars__info-text">148 546 PS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -534,7 +544,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 
 	<section class="statistic">
 		<div class="container statistic__wrapper">
@@ -551,7 +561,7 @@
 		</div>
 	</section>
 
-	<section class="application">
+	<!--<section class="application">
 		<div class="container application__wrapper">
 			<div class="application__info wow fadeInLeft" data-wow-duration="0.5s">
 				<h2 class="application__title">Удобное приложение PlayStrike</h2>
@@ -590,14 +600,14 @@
 			<img class="application__image wow fadeInRight" data-wow-duration="0.5s"
 				src="./assets/img/previews/app-preview-2.png" alt="">
 		</div>
-	</section>
+	</section>-->
 	<footer class="footer">
 		<div class="container">
 			<div class="df-jcsb-aic">
 				<a href="#">
 					<img class="footer__logo" src="./assets/img/icons/logo-icon.svg" alt="">
 				</a>
-				<div class="footer__menu">
+				<!--<div class="footer__menu">
 					<div class="menu__item">
 						<p class="menu__title"> Новости
 						</p>
@@ -634,12 +644,12 @@
 							<a href="#" class="menu__link">Как играть</a>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="footer__buttons">
-					<a class="button button_white df-jcsb-aic">Скачать на Mac <img class="apple__icon"
+					<!--<a class="button button_white df-jcsb-aic">Скачать на Mac <img class="apple__icon"
 							src="./assets/img/icons/apple-icon-white.svg" alt=""></a>
 					<a class="button button_white df-jcsb-aic"> Скачать на Windows <img
-							src="./assets/img/icons/windows-icon-white.svg" alt=""></a>
+							src="./assets/img/icons/windows-icon-white.svg" alt=""></a>-->
 					<div class="footer__socials df-jcsb-aic">
 						<a class="footer__social-link" href="">
 							<svg viewBox="0 0 11 23" fill="none">
@@ -687,21 +697,24 @@
 			</div>
 		</div>
 		<svg width="639" height="722" viewBox="0 0 126 143" fill="none" xmlns="http://www.w3.org/2000/svg"
-		class="footer__back">
-		<path
-			d="M34.2261 15.8088L71.7106 49.3683L65.2214 65.0902L50.0422 46.4288L50.4525 48.4141L40.5359 57.6262L34.2261 15.8088Z"
-			fill="#FAC704" />
-		<path d="M50.9504 50.8967L60.1529 62.7016L27.6414 98.8003L0.40332 98.9503L50.9504 50.8967Z" fill="#FAC704" />
-		<path
-			d="M77.1265 43.9397L73.131 47.5999L63.5658 38.7246L104.496 0L53.7148 142.209L44.7026 83.3048L54.9196 72.5508L58.2117 88.2366L77.1265 43.9397Z"
-			fill="#FAC704" />
-		<path d="M85.4974 62.228L78.8032 81.1829L93.0449 98.5566L125.989 98.5965L85.4974 62.228Z" fill="#FAC704" />
-	</svg>
+			class="footer__back">
+			<path
+				d="M34.2261 15.8088L71.7106 49.3683L65.2214 65.0902L50.0422 46.4288L50.4525 48.4141L40.5359 57.6262L34.2261 15.8088Z"
+				fill="#FAC704" />
+			<path d="M50.9504 50.8967L60.1529 62.7016L27.6414 98.8003L0.40332 98.9503L50.9504 50.8967Z" fill="#FAC704" />
+			<path
+				d="M77.1265 43.9397L73.131 47.5999L63.5658 38.7246L104.496 0L53.7148 142.209L44.7026 83.3048L54.9196 72.5508L58.2117 88.2366L77.1265 43.9397Z"
+				fill="#FAC704" />
+			<path d="M85.4974 62.228L78.8032 81.1829L93.0449 98.5566L125.989 98.5965L85.4974 62.228Z" fill="#FAC704" />
+		</svg>
 	</footer>
 	<button class="to__top">
-		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up" viewBox="0 0 16 16">
-			<path fill-rule="evenodd" d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z"/>
-			<path fill-rule="evenodd" d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up"
+			viewBox="0 0 16 16">
+			<path fill-rule="evenodd"
+				d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z" />
+			<path fill-rule="evenodd"
+				d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" />
 		</svg>
 	</button>
 
