--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 			</div>
 			<div class="footer__bottom">
 				<a href="#">Пользовательское соглашение</a>
-				<a href="#">Помощь</a>
+				<!--<a href="#">Помощь</a>-->
 				<a href="#">Все права защищены. 2021</a>
 			</div>
 		</div>
