--- a/index.html
+++ b/index.html
@@ -7,53 +7,118 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="./assets/img/favicon.ico">
 	<title>PlayStrike</title>
-	<link rel="stylesheet" href='./assets/css/reset.css'>
-	<link rel="stylesheet" href='./assets/css/swiper.min.css'>
-	<link rel="stylesheet" href='./assets/css/style.css'>
-	<link rel="stylesheet" href='./assets/css/wowjs.css'>
+	<link rel="stylesheet" href='assets/css/reset.css'>
+	<link rel="stylesheet" href='assets/css/swiper.min.css'>
+	<link rel="stylesheet" href='assets/css/style.css'>
+	<link rel="stylesheet" href='assets/css/wowjs.css'>
 </head>
 
 <body>
-	<header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
+	<div class="preloader">
+		<div class="preloader__row">
+			<div class="preloader__item"></div>
+			<div class="preloader__item"></div>
+		</div>
+	</div>
+	<header>
+		<div id="trailer" class="is_overlay">
+			<video autoplay muted loop id="video" width="100%" height="auto" style="position: absolute;">
+				<source src="123456.mp4" type="video/mp4">
+			</video>
+			<div class="wallopers">
+				<div class="headerMenu">
+					<div class="headerMenuContent">
+						<div class="logotype">
+
+							<a href="#"><img src="assets/img/icons/playstrike.png"></a>
+						</div>
+						<!---->
+						<div class="navigatoin">
+							<!--
+			<a href="">Главная</a>
+			<a href="">Трансляции</a>
+			<a href="">Лиги</a>
+			<a href="">Приложение</a>
+			<a href="">Аналитика</a>
+-->
+							<a href="https://my.playstrike.ru/auth/signup"><svg width="18" height="18" viewBox="0 0 18 18"
+									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
+									<path
+										d="M15.364 2.636A8.941 8.941 0 0 0 9 0a8.941 8.941 0 0 0-6.364 2.636A8.941 8.941 0 0 0 0 9a8.94 8.94 0 0 0 2.636 6.364A8.941 8.941 0 0 0 9 18a8.941 8.941 0 0 0 6.364-2.636A8.941 8.941 0 0 0 18 9a8.941 8.941 0 0 0-2.636-6.364zM3.906 15.092A5.149 5.149 0 0 1 9 10.562c1.37 0 2.658.533 3.627 1.502a5.125 5.125 0 0 1 1.467 3.028A7.91 7.91 0 0 1 9 16.945a7.909 7.909 0 0 1-5.094-1.853zM9 9.475A2.737 2.737 0 0 1 6.266 6.74 2.737 2.737 0 0 1 9 4.008a2.737 2.737 0 0 1 2.734 2.733A2.737 2.737 0 0 1 9 9.475zm6.002 4.726a6.184 6.184 0 0 0-1.63-2.883 6.164 6.164 0 0 0-2.251-1.44 3.787 3.787 0 1 0-4.24.002c-.77.28-1.482.714-2.095 1.284A6.164 6.164 0 0 0 2.997 14.2 7.912 7.912 0 0 1 1.055 9c0-4.381 3.564-7.945 7.945-7.945S16.945 4.619 16.945 9a7.911 7.911 0 0 1-1.943 5.2z"
+										fill="#FFF"></path>
+								</svg> Создать аккаунт</a>
+							<a href="https://my.playstrike.ru/auth/signin"><svg width="18" height="18" viewBox="0 0 18 18"
+									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
+									<path
+										d="M18 0h-3.936L8.999 6.003 3.937 0H0v3.937L6.278 9.23l-.867 1.028a2.635 2.635 0 0 0-3.262.371l-.373.373 1.492 1.492-2.341 2.34H0V18h3.164v-.927l2.341-2.34 1.492 1.49.373-.372a2.64 2.64 0 0 0 .37-3.262L9 11.527l1.26 1.062a2.64 2.64 0 0 0 .37 3.262l.373.373 1.492-1.492 2.34 2.341V18H18v-3.164h-.927l-2.34-2.341 1.49-1.492-.372-.373a2.635 2.635 0 0 0-3.263-.37l-.865-1.027L18 3.936V0zM2.11 16.945H1.054v-1.054h.309l.745.745v.31zm.745-1.054l-.746-.746 1.905-1.904.61.61.135.135-1.904 1.905zm4.078-1.223L3.33 11.067a1.582 1.582 0 0 1 1.801.31l1.492 1.49c.486.487.589 1.213.309 1.801zm.111-2.871l-.84-.841.88-1.045 1.099.926-1.139.96zm9.901 4.094v1.054h-1.054v-.309l.745-.745h.31zm-1.054-.746l-.746.746-1.904-1.905.135-.135.61-.61 1.905 1.904zm-3.023-3.769a1.582 1.582 0 0 1 1.8-.31l-3.6 3.602a1.585 1.585 0 0 1 .308-1.8l1.492-1.492zm-1.072-.42l-.84.84-9.901-8.35V1.055h2.391l8.35 9.901zm5.15-7.51l-5.903 4.98-1.354-1.605 4.865-5.766h2.391v2.391z"
+										fill="#FFF"></path>
+								</svg> Начать играть</a>
+						</div>
+
+						<!-- 		<div class="users">
+		    <a href="Создать аккаунт"></a><a href="Войти"></a>
+		</div> -->
+					</div>
+				</div>
+				<section class="main wow fadeInDown" data-wow-duration="2s" style="padding-top:12vh;margin: 0 auto;">
+					<div class="container">
+						<!-- <div class="main__logo">
+				<img src="./assets/img/icons/logo-icon.svg" alt="">
+			</div> -->
+						<h1 class="main__title title">Крупнейшая международная киберспортивная платформа</h1>
+						<p class="main__description">Тысячи игроков со всего мира, ведут жаркие бои в любимых играх за внушительные
+							призы</p>
+						<div class="main__buttons df-jcsb-aic">
+							<a class="button button_yellow-transparent df-jcsb-aic" style="background: #FAC704;
+    color: #161616;margin-right: 2vw;" href="https://my.playstrike.ru/auth/signup">Начать играть</a>
+							<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
+									src="./assets/img/icons/windows-icon.svg" alt=""></a>
+
+						</div>
+						<a href="">
+							<p class="macos">Скачать версию приложения для MacOS
+								<!--        <img class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt="">-->
+							</p>
+						</a>
+					</div>
+				</section>
+				<a href="#benefits" class="scrollImg" ><img src="assets/img/icons/pil-gif.gif" alt=""></a>
+			</div>
+
+
+
+		</div>
+
+
+
+	</header>
+
+	<!-- <header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
 		<a href="#">
-			<!--Для партнёров-->
+			Для партнёров 
 		</a>
 		<div class="header__buttons df-jcsb-aic">
-			<a class="button_white button" href="https://my.playstrike.ru/auth/signup">
-				<!--<img src="./assets/img/icons/download.svg" alt="">-->
-				Регистрация
+			<a class="button_white button">
+				<img src="./assets/img/icons/download.svg" alt="">
+				Скачать клиент
 			</a>
 			<a class="button button_yellow" href="https://my.playstrike.ru/">
 				Личный кабинет
 			</a>
-			<!--<div class="page__language js-dropdown">
+			<div class="page__language js-dropdown">
 				<p class="current__language">Ru <img src="./assets/img/icons/language-arrow.svg" alt="">
 				</p>
 				<ul class="page__language">
 					<li>Ru</li>
 					<li>En</li>
 				</ul>
-			</div>-->
-		</div>
-	</header>
-
-	<section class="main wow fadeInDown" data-wow-duration="0.5s">
-		<div class="container ">
-			<div class="main__logo">
-				<img src="./assets/img/icons/logo-icon.png" alt="">
 			</div>
-			<h1 class="main__title title">Соревновательные матчи и турниры</h1>
-			<p class="main__description">Задача организации, в особенности же новая модель организационной деятельности
-				позволяет оценить значение позиций, занимаемых участниками в отношении поставленных задач. </p>
-			<!--<div class="main__buttons df-jcsb-aic">
-				<a class="button button_yellow-transparent df-jcsb-aic">Скачать на Mac <img class="apple__icon"
-						src="./assets/img/icons/apple-icon.svg" alt=""></a>
-				<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
-						src="./assets/img/icons/windows-icon.svg" alt=""></a>
-			</div>-->
 		</div>
-	</section>
-	<!--<section class="partners wow fadeInDown" data-wow-duration="0.5s">
+	</header> -->
+
+
+	<!--
+	<section class="partners wow fadeInDown" data-wow-duration="0.5s">
 		<div class="partners__swiper">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide partners__slide slide-1">
@@ -79,44 +144,9 @@
 				</div>
 			</div>
 		</div>
-	</section>-->
-	<section class="news news__container wow fadeInUp" data-wow-duration="0.5s">
-		<h2 class="instructions__title title">Новости</h2>
-		<div class="news__swiper">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<img src="./assets/img/tournaments/1.png" alt="">
-					<p class="news__title">
-						<!--<span class="online">Онлайн</span>-->
-						NAC Sport Championship 2020</p>
-				</div>
-				<div class="swiper-slide">
-					<img src="./assets/img/tournaments/2.png" alt="">
-					<p class="news__title">
-						<!--<span class="online">Онлайн</span>-->
-						MAJOR STOCKHOLM 2021</p>
-				</div>
-				<div class="swiper-slide">
-					<img src="./assets/img/tournaments/3.png" alt="">
-					<p class="news__title">
-						<!--<span class="online">Онлайн</span>-->
-						THE ELEAGUE - CS:GO Premier</p>
-				</div>
-				<div class="swiper-slide">
-					<img src="./assets/img/tournaments/4.png" alt="">
-					<p class="news__title">
-						<!--<span class="online">Онлайн</span>-->
-						IEM KATOWICE CS:GO</p>
-				</div>
-			</div>
-			<div class="swiper__arrows">
-				<button class="swiper-button-prev news__arrow news__arrow_left"></button>
-				<button class="swiper-button-next news__arrow news__arrow_right"></button>
-			</div>
-		</div>
 	</section>
-	<section class="benefits wow fadeInUp" data-wow-duration="0.5s">
-		<h2 class="instructions__title title">Преимущества</h2>
+-->
+	<section id="benefits" class="benefits wow fadeInUp" data-wow-duration="1s" style="margin-top: 6vh;">
 		<div class="container df-jcsb-aic">
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
 				<img class="benefits__image" src="./assets/img/benefits/1.png" alt="">
@@ -128,7 +158,7 @@
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">
 				<img class="benefits__image" src="./assets/img/benefits/2.png" alt="">
 				<div class="benefits__text">
-					<p class="benefits__title">Множество игроков</p>
+					<p class="benefits__title">Более 200 000 игроков</p>
 					<p class="benefits__description">Играйте с друзьями и собирайте команды в огромном комьюнити игроков</p>
 				</div>
 			</div>
@@ -148,12 +178,40 @@
 			</div>
 		</div>
 	</section>
+	<!-- 	<section class="news news__container wow fadeInUp" data-wow-duration="0.5s" style="    background: #2223299c;
+	    padding-top: 42px;">
+	    <h2 class="promotions__title title" style="margin-bottom: 4.8vh;">Свежие новости</h2>
+	    <div class="news__swiper">
+	        <div class="swiper-wrapper">
+	            <div class="swiper-slide">
+	                <img src="./assets/img/tournaments/1.png" alt="">
+	                <p class="news__title">----<span class="online">Онлайн</span>---- NAC Sport Championship 2020</p>
+	            </div>
+	            <div class="swiper-slide">
+	                <img src="./assets/img/tournaments/2.png" alt="">
+	                <p class="news__title">----<span class="online">Онлайн</span>---- MAJOR STOCKHOLM 2021</p>
+	            </div>
+	            <div class="swiper-slide">
+	                <img src="./assets/img/tournaments/3.png" alt="">
+	                <p class="news__title">----<span class="online">Онлайн</span>---- THE ELEAGUE - CS:GO Premier</p>
+	            </div>
+	            <div class="swiper-slide">
+	                <img src="./assets/img/tournaments/4.png" alt="">
+	                <p class="news__title">----<span class="online">Онлайн</span>---- IEM KATOWICE CS:GO</p>
+	            </div>
+	        </div>
+	        <div class="swiper__arrows">
+	            <button class="swiper-button-prev news__arrow news__arrow_left"></button>
+	            <button class="swiper-button-next news__arrow news__arrow_right"></button>
+	        </div>
+	    </div>
+	</section> -->
+
 	<section class="games">
 		<div class="container df-jcsb-aic">
 			<div class="games__card active js-game  wow slideInLeft" data-wow-duration="0.5s">
 				<div class="games__image">
 					<img class="games-img-pc" src="./assets/img/backgrounds/game-dota-preview.png" alt="">
-					<img class="games__image_gold-wrapper games-img-pc" src="./assets/img/backgrounds/game-dota-back.svg" alt="">
 					<img class="games-img-phone" src="./assets/img/backgrounds/game-dota-preview-mobile.png" alt="">
 					<a href="https://my.playstrike.ru/" class="games__download">Создать аккаунт</a>
 				</div>
@@ -162,7 +220,6 @@
 			<div class="games__card js-game  wow slideInRight" data-wow-duration="0.5s">
 				<div class="games__image">
 					<img class="games-img-pc" src="./assets/img/backgrounds/game-cs-preview.png" alt="">
-					<img class="games__image_gold-wrapper games-img-pc" src="./assets/img/backgrounds/game-cs-back.svg" alt="">
 					<img class="games-img-phone" src="./assets/img/backgrounds/game-cs-preview-mobile.png" alt="">
 					<a href="https://my.playstrike.ru/" class="games__download">Создать аккаунт</a>
 				</div>
@@ -208,12 +265,14 @@
 			<h2 class="promotions__title title"> Акции и бонусы от PlayStrike</h2>
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
-				<div class="promotions__card-descriptions">Пригласи друга и  получи +200 PS в качестве бонуса</div>
+				<div class="promotions__card-descriptions">Пополни баланс сегодня и получи Profeccional подписку на 30 дней
+				</div>
 				<a href="https://my.playstrike.ru/" class="button button_white promotions__button">Создать аккаунт</a>
 			</div>
 		</div>
 	</section>
-	<!--<section class="players wow fadeInUp" data-wow-duration="0.5s">
+	<!--
+	<section class="players wow fadeInUp" data-wow-duration="0.5s">
 		<div class="container">
 			<h2 class="professional__title title">Профессиональные игроки</h2>
 			<p class="players__description">Повседневная практика показывает, что сложившаяся структура организации требуют
@@ -365,14 +424,20 @@
 					</div>
 				</div>
 			</div>
-	</section>-->
+        </div>
+	</section>
+	
+-->
+
+
+	<!--
 	<section class="banner">
 		<div class="container  df-jcsb-aic">
-			<p>Бесплатная регистрация для новых игроков</p>
+			<p>Бонус 500 BS для новых игроков</p>
 			<a href="https://my.playstrike.ru/" class="button button_yellow">Создать аккаунт</a>
 		</div>
 	</section>
-	<!--<section class="stars wow fadeInUp" data-wow-duration="0.5s">
+	<section class="stars wow fadeInUp" data-wow-duration="0.5s">
 		<div class="container">
 			<div class="stars__banner df-jcsb-aic">
 				<div class="stars__banner-card">
@@ -411,7 +476,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">200 029 PS</p>
+							<p class="stars__info-text">200 029 BS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -442,7 +507,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">190 095 PS</p>
+							<p class="stars__info-text">190 095 BS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -471,7 +536,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">180 571 PS</p>
+							<p class="stars__info-text">180 571 BS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -500,7 +565,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">150 345 PS</p>
+							<p class="stars__info-text">150 345 BS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -529,7 +594,7 @@
 						</div>
 						<div class="stars__earned">
 							<p class="stars__info-title">Выиграно</p>
-							<p class="stars__info-text">148 546 PS</p>
+							<p class="stars__info-text">148 546 BS</p>
 						</div>
 						<div class="stars__members">
 							<p class="stars__info-title">Участников</p>
@@ -544,7 +609,8 @@
 				</div>
 			</div>
 		</div>
-	</section>-->
+	</section>
+-->
 
 	<section class="statistic">
 		<div class="container statistic__wrapper">
@@ -561,7 +627,7 @@
 		</div>
 	</section>
 
-	<!--<section class="application">
+	<section class="application">
 		<div class="container application__wrapper">
 			<div class="application__info wow fadeInLeft" data-wow-duration="0.5s">
 				<h2 class="application__title">Удобное приложение PlayStrike</h2>
@@ -600,14 +666,14 @@
 			<img class="application__image wow fadeInRight" data-wow-duration="0.5s"
 				src="./assets/img/previews/app-preview-2.png" alt="">
 		</div>
-	</section>-->
+	</section>
 	<footer class="footer">
 		<div class="container">
 			<div class="df-jcsb-aic">
 				<a href="#">
 					<img class="footer__logo" src="./assets/img/icons/logo-icon.svg" alt="">
 				</a>
-				<!--<div class="footer__menu">
+				<div class="footer__menu">
 					<div class="menu__item">
 						<p class="menu__title"> Новости
 						</p>
@@ -644,12 +710,12 @@
 							<a href="#" class="menu__link">Как играть</a>
 						</div>
 					</div>
-				</div>-->
+				</div>
 				<div class="footer__buttons">
-					<!--<a class="button button_white df-jcsb-aic">Скачать на Mac <img class="apple__icon"
+					<a class="button button_white df-jcsb-aic">Скачать на Mac <img class="apple__icon"
 							src="./assets/img/icons/apple-icon-white.svg" alt=""></a>
 					<a class="button button_white df-jcsb-aic"> Скачать на Windows <img
-							src="./assets/img/icons/windows-icon-white.svg" alt=""></a>-->
+							src="./assets/img/icons/windows-icon-white.svg" alt=""></a>
 					<div class="footer__socials df-jcsb-aic">
 						<a class="footer__social-link" href="">
 							<svg viewBox="0 0 11 23" fill="none">
@@ -692,7 +758,7 @@
 			</div>
 			<div class="footer__bottom">
 				<a href="#">Пользовательское соглашение</a>
-				<!--<a href="#">Помощь</a>-->
+				<a href="#">Помощь</a>
 				<a href="#">Все права защищены. 2021</a>
 			</div>
 		</div>
@@ -717,10 +783,23 @@
 				d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" />
 		</svg>
 	</button>
-
-	<script src='./assets/scripts/slider.js'></script>
-	<script src='./assets/scripts/wow.js'></script>
-	<script src='./assets/scripts/index.js'></script>
+	<script>
+		window.onload = function () {
+			document.body.classList.add('loaded');
+		}
+	</script>
+	<script>
+		window.onload = function () {
+			document.body.classList.add('loaded_hiding');
+			window.setTimeout(function () {
+				document.body.classList.add('loaded');
+				document.body.classList.remove('loaded_hiding');
+			}, 500);
+		}
+	</script>
+	<script src='assets/scripts/slider.js'></script>
+	<script src='assets/scripts/wow.js'></script>
+	<script src='assets/scripts/index.js'></script>
 </body>
 
 </html>
